MAHOUT-287 Adding lognormalize option to dictionary vectorizer
git-svn-id: https://svn.apache.org/repos/asf/mahout/trunk@1003874 13f79535-47bb-0310-9956-ffa450edef68